--- a/14.0/odoo.conf
+++ b/14.0/odoo.conf
@@ -1,11 +1,11 @@
 [options]
-addons_path = /mnt/extra-addons
+addons_path = /mnt/oe,/mnt/extra-addons
 data_dir = /var/lib/odoo
 admin_passwd = dgsdgfdgsdfadvzxfed
 # csv_internal_sep = ,
 db_host = db
 # db_maxconn = 64
-db_name = odoo13
+db_name = odoo14
 db_password = odoo
 # db_port = False
 # db_sslmode = prefer
