[IMP] add redis to cluster

--- a/14.0/odoo.conf
+++ b/14.0/odoo.conf
@@ -32,7 +32,7 @@ db_user = odoo
 # log_level = info
 # logfile = 
 # longpolling_port = 8072
-# max_cron_threads = 2
+max_cron_threads = 0
 # osv_memory_age_limit = False
 # osv_memory_count_limit = False
 # pg_path = 
@@ -41,7 +41,7 @@ db_user = odoo
 # reportgz = False
 # screencasts = 
 # screenshots = /tmp/odoo_tests
-# server_wide_modules = base,web
+server_wide_modules = base,web,session_redis
 # smtp_password = False
 # smtp_port = 25
 # smtp_server = localhost
