--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+COMPOSE_PROJECT_NAME="loadb"
 ODOO_VERSION="14.0"
 
 POSTGRES_HOST=db
@@ -7,4 +8,9 @@ POSTGRES_PORT=5444
 POSTGRES_PASSWORD=odoo
 
 ODOO_RC=/etc/odoogap/odoo.conf
+ODOO_SESSION_REDIS=1
+ODOO_SESSION_REDIS_HOST=redis
+ODOO_SESSION_REDIS_PORT=6379
 
+
+TEST_DOCKER_PORT=80
