--- a/14.0/Dockerfile
+++ b/14.0/Dockerfile
@@ -4,16 +4,21 @@ USER root
 
 RUN mkdir /mnt/oe \
     && mkdir -p /etc/odoogap \
-    && mkdir -p /mnt/extra-addons \
     && apt-get update \
     && apt-get install -y --no-install-recommends git
 
 COPY ./entrypoint.sh /
+COPY ./requirements.txt /
 COPY ./odoo.conf /etc/odoogap/
+COPY ./mnt /mnt/extra-addons
+
+RUN python3 -m pip install --no-cache-dir -r requirements.txt \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
 RUN chown -R odoo /mnt/oe \
-    && chown -R odoo /etc/odoogap/ \
-    && chown -R odoo /mnt/extra-addons
+    && chown -R odoo /mnt/extra-addons \
+    && chown -R odoo /etc/odoogap/
 
 USER odoo
 
