--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -11,8 +11,6 @@ upstream long {
 
 server {
     listen 80;
-    server_name ${NGINX_HOST} default_server;
-
 
     proxy_read_timeout 720s;
     proxy_connect_timeout 720s;
@@ -23,7 +21,8 @@ server {
     client_max_body_size 10M;
 
     proxy_http_version  1.1;
-    proxy_set_header X-Forwarded-Host $server_name:8080;
+    proxy_set_header X-Forwarded-Host $server_name:${TEST_DOCKER_PORT};
+    proxy_set_header X-Forwarded-Port ${TEST_DOCKER_PORT};
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header X-Real-IP $remote_addr;
