--- a/docker-compose-init.yml
+++ b/docker-compose-init.yml
@@ -16,7 +16,7 @@ services:
     restart: "no"
     volumes:
       - odoo_home:/var/lib/odoo
-      - odoo_extra:/mnt/extra-addons
+      - ./14.0/mnt/:/mnt/extra-addons
       - ~/git/oe/14.0/:/mnt/oe
     depends_on:
       - db
