[IMP] update to Odoo 16.0

--- a/.env
+++ b/.env
@@ -2,12 +2,12 @@ COMPOSE_PROJECT_NAME="loadb"
 ODOO_VERSION="14.0"
 
 POSTGRES_HOST=db
-POSTGRES_DB=odoo
+POSTGRES_DB=v16_odoo
 POSTGRES_USER=odoo
 POSTGRES_PORT=5444
 POSTGRES_PASSWORD=odoo
 
-ODOO_RC=/etc/odoogap/odoo.conf
+
 ODOO_SESSION_REDIS=1
 ODOO_SESSION_REDIS_HOST=redis
 ODOO_SESSION_REDIS_PORT=6379
