--- a/docker-compose-init.yml
+++ b/docker-compose-init.yml
@@ -1,31 +1,14 @@
 version: "3.7"
 
 x-odoo-build: &odoo-build
-  context: ./14.0
+  context: ./16.0
   dockerfile: Dockerfile
 
-
 services:
-
-  odoo_init:
-    container_name: odoo_init
-    command: ["odoo", "--no-http", "--max-cron-threads", "0", "--stop-after-init", "-i", "session_redis"]
-    env_file: .env
-    build: *odoo-build
-    image: odoogap/odoo14
-    restart: "no"
-    volumes:
-      - odoo_home:/var/lib/odoo
-      - ./14.0/mnt/:/mnt/extra-addons
-      - ~/git/oe/14.0/:/mnt/oe
-    depends_on:
-      - db
-    networks:
-      - net1
-
+      
   db:
     env_file: .env
-    image: postgres:12
+    image: postgres:14
     container_name: db
     restart: unless-stopped
     ports:
@@ -37,7 +20,23 @@ services:
     environment:
       - POSTGRES_USER=odoo
       - POSTGRES_PASSWORD=odoo
-      - POSTGRES_DB=odoo14
+      - POSTGRES_DB=odoo
+
+  odoo1:
+    container_name: odoo_replica1
+    env_file: .env
+    build: *odoo-build
+    image: erpgap/odoo16
+    restart: "no"
+    command: ["/startup.sh"]
+    volumes:
+      - odoo_home:/var/lib/odoo
+      - odoo_extra:/mnt/extra-addons
+      - ./16.0/odoo.conf:/etc/odoo/odoo.conf
+    depends_on:
+      - db
+    networks:
+      - net1
 
 volumes:
   db_home:
@@ -46,7 +45,11 @@ volumes:
     external: false
   odoo_extra:
     external: False
+  web_root:
+    external: false
+  redis_data:
+    external: false
 
 networks:
-  net1:
+  net1: 
     name: net1
